Fixed bug #22775 (Fatal errors exit with status 0 with CGI/CLI)